# czytaj

./: .gitignore  BEFORE_AFTER_SUMMARY.md  BUILD_FIX_SUMMARY.md  Cargo.toml  DESIGN_IMPROVEMENTS.md  FINAL_MIGRATION_SUMMARY.md  FINAL_SUMMARY.md  ICON_FORMAT_FIX.md  IMPLEMENTATION_SUMMARY.md  MERGE_SUMMARY.md  MIGRATION_COMPARISON.md  MIGRATION_COMPLETE.txt  README.md  TAURI_ARCHITECTURE.md  UI_MOCKUP.md  UI_VISUAL_GUIDE.md  VERSION_FIX_SUMMARY.md  index.html  package-lock.json  package.json  ui-preview-dark.html  ui-preview-light.html
src/: App.tsx  feed_engine.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: article.rs  feed.rs  mod.rs  settings.rs
src/components/: ArticleDetail.tsx  ArticleGrid.tsx  Settings.tsx  Sidebar.tsx
src/db/: mod.rs
src/models/: article.rs  feed.rs  mod.rs  settings.rs
src/services/: api.ts
src/styles/: App.css
src/types/: index.ts
src/ui/: article_detail.rs  content.rs  mod.rs  settings.rs  sidebar.rs
src/utils/: mod.rs  sanitizer.rs
