[package]
name = "czytaj"
version = "0.1.0"
description = "Czytaj RSS Reader - A modern RSS/ATOM reader with Google News-style UI"
authors = ["nixenos"]
license = "GPL-3.0"
repository = "https://github.com/nixenos/czytaj"
edition = "2021"

[lib]
name = "czytaj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# RSS Reader dependencies
reqwest = { version = "0.12", features = ["blocking"] }
feed-rs = "2.1"
tokio = { version = "1", features = ["full"] }
regex = "1"
html-escape = "0.2"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
